...
                          ? Column(
                              crossAxisAlignment: CrossAxisAlignment.center,
                              children: [
                                Container(
                                  width: SizeHelper.widthMultiplier * 120,
                                  child: RaisedButton(
                                    key: Key('loginPageLoginButton'),
                                    elevation: 4,
                                    onPressed: () {
                                      setState(() {
                                        islogging = true;
                                      });
                                    },
...
                                    border: Border.all(
                                      color: Colors.white,
                                      width: ScreenUtil().setSp(3),
                                    ),
                                  ),
                                  child: TextFormField(
                                    key: Key('loginPasswordInput'),
                                    initialValue: txtPassword,
                                    textInputAction: TextInputAction.send,
                                    onEditingComplete: () {
                                      FocusScope.of(context).unfocus();
                                      checkValidations();
                                    },
...
