...
                  child: Text(
                    'START',
                    style: TextStyle(
                      fontSize: 18,
                      fontWeight: FontWeight.bold,
                    ),
                    key: Key('welcomeLoginButton'),
                  ),
                ),
              ),
            ),
          ],
        ),
...
