...
            : EdgeInsets.fromLTRB(
                SizeHelper.widthMultiplier * 4,
                SizeHelper.heightMultiplier * 2,
                SizeHelper.widthMultiplier * 4,
                SizeHelper.heightMultiplier * 4),
        child: InkWell(
            key: Key('searchStoresBar'),
            onTap: () {
              pushNewScreen(context,
                  screen: SearchStoresPage(),
                  withNavBar: false,
                  pageTransitionAnimation: PageTransitionAnimation.fade);
            },
...
